IssueList：title字体为14，颜色为labels[0]的颜色 Issue窗口：内容与注释间加横线；注释人背景色调整

--- a/GitHubExtension/View/Controls/IssueListItem.xaml
+++ b/GitHubExtension/View/Controls/IssueListItem.xaml
@@ -61,7 +61,8 @@
                            Grid.Column="1" 
                            Grid.Row="0" 
                            Grid.ColumnSpan="3" 
-                           FontSize="12" 
+                           FontSize="14" 
+                           Foreground="{Binding Path=Labels[0].Color, Converter={StaticResource ColorConverter}}"
                            TextTrimming="CharacterEllipsis" 
                            HorizontalAlignment="Stretch" Margin="0,0,0,6" />
 
